@@ -20,6 +20,8 @@
 ***************************************************************************/
 #pragma once
 
+#define _WIN32_WINNT 0x0500
+
 #include <string>
 #include <functional>
 #include <utils.h>
